# Eninen

./: .gitignore  .sconsign.dblite  CMakeLists.txt  README.md  main.cpp
Project/: icon.svg.import  main.tscn  project.godot
include/: app.hpp  board_frame.hpp  board_panel.hpp  chess_board.h  chess_board.hpp  chess_piece.h  chess_piece.hpp  macros.h  macros.hpp  move.hpp  moves.h  moves.hpp  square_panel.hpp
src/: CMakeLists.txt  chess_board.cpp  chess_piece.cpp  foo.cpp  gdexample.os  move.cpp  moves.cpp  register_types.os
src/gui/: app.cpp  board_panel.cpp  frame.cpp  square_panel.cpp
